# PaddleSOT

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  example.py  pyproject.toml  start_test.sh
.github/workflows/: codestyle.yaml  ex.yaml  paddle_build.yaml  paddle_ci.yaml  precommit.yaml  test.yaml  unittest.yaml
docs/: UNPACK_SEQUENCE.md  call_function_implementation.md  profiler_introduction.md
docs/design/: builtin-dispatcher.md  closure.md  eval_frame.md  output-restoration.md  side-effect.md  stringify-guard.md  (+1 more)
examples/: debug.py  graph_break.py  guard.py  property.py  run_all.sh  show_attr.py  trace_basic.py
opcode_translator/: __init__.py  statement_ir.py  symbolic_trace.py  to_static.py
sot/: __init__.py  infer_meta.py  psdb.py  translate.py
symbolic_trace/: __init__.py  bytecode_analysis.py  convert_functions.py  infer_meta.py  interpreter.py  monkey_patch.py  proxy_tensor.py  statement_ir.py  symbolic_context.py  symbolic_trace.py  trace.py  trace_cache_entrance.py
tests/: error_test_general_bytecode.py  error_test_guard.py  error_test_jump_inline.py  error_test_resnet50.py  error_test_resnet_with_trace_cache.py  error_test_side_effect.py  error_test_sir_call.py  error_test_symbolic_load_before_call.py  error_test_symbolic_nested.py  error_test_trace_cache.py  error_test_trace_cache.py.zhanfei  extract_errors.py  run_all.sh  run_all_paddle_ci.sh  test-side-effect.py  test_01_basic.py  test_02_store_inplace.py  test_03_tuple.py  test_04_list.py  test_05_dict.py  test_06_call_function.py  test_07_unpack.py  test_08_rot.py  test_09_f_string.py  test_10_build_unpack.py  test_11_jumps.py  test_12_for_loop.py  test_13_make_function.py  test_14_operators.py  test_15_slice.py  test_16_paddle_api.py  test_17_paddle_layer.py  test_18_tensor_method.py  test_19_closure.py  test_20_global.py  test_20_string.py  test_21_global.py  test_analysis_inputs.py  test_basic_translation.py  test_break_graph.py  (+55 more)
(+184 files in other folders)
