[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PaddleSOT"
version = "0.0.1a0"
description = "A Bytecode level Implementation of Symbolic OpCode Translator For PaddlePaddle"
readme = "README.md"
requires-python = ">=3.7,<3.12"
authors = [
    {name = "PaddlePaddle", email = "Paddle-better@baidu.com"},
]
keywords = ["Framework", "Deep Learning", "JIT"]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "xdoctest"
]
paddle-test = [
    "opencv-python",
    "scipy",
    "pyyaml",
    "gym==0.26.2",
]

[tool.setuptools.packages]
find = {}

[tool.black]
line-length = 80
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 80
known_first_party = ["paddle", "sot"]

[tool.ruff]
target-version = "py37"
select = [
    # Pycodestyle
    "E",
    "W",

    # Pyflakes
    "F",

    # Comprehensions
    "C4",

    # Pyupgrade
    "UP",

    # Bugbear
    "B002",
    "B003",
    "B004",
    "B009",
    "B010",
    "B011",
    "B012",
    "B013",
    "B014",
    "B015",
    "B016",
    "B017",
    "B018",
    "B019",
    "B020",
    "B021",
    "B022",
    "B025",
    "B029",
    "B032",

    # Pylint
    "PLE",
    "PLC0414",
    "PLC3002",
    "PLR0206",
    "PLR0402",
]
ignore = [
    "E402",
    "E501",
    "E722",
    "E731",
    "E741",
    "F841",
    "UP015",
    "UP038",
]

[tool.ruff.per-file-ignores]
"tests/test_dup_top.py" = ["E712"]
